<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/enable">
        <CheckBoxPreference
            android:title="@string/setting_enabled"
            android:defaultValue="false"
            android:checked="false"
            android:summary="@string/call_enabled_description"
            android:key="callEnabled" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/settings">
        <CheckBoxPreference
            android:title="@string/notify_only_if_screen_off"
            android:defaultValue="false"
            android:summary="@string/call_only_if_screen_off_description"
            android:key="callScreenOffOnly" />
        <!--<CheckBoxPreference-->
            <!--android:title="@string/notify_only_if_silent"-->
            <!--android:defaultValue="false"-->
            <!--android:summary="@string/call_only_if_silent_description"-->
            <!--android:key="callSilentOnly" />-->
        <CheckBoxPreference
            android:title="@string/call_hide_caller_id"
            android:defaultValue="false"
            android:key="callHideID"
            android:summary="@string/call_hide_caller_id_description"/>
    </PreferenceCategory>
    <!--<PreferenceCategory-->
        <!--android:title="@string/test">-->
        <!--<Preference-->
            <!--android:title="@string/test_notification"-->
            <!--android:summary="@string/test_notification_description"-->
            <!--android:key="callTestNotification" />-->
    <!--</PreferenceCategory>-->
</PreferenceScreen>