<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="16dp">

    <android.support.v7.widget.CardView
        xmlns:cardview="http://schemas.android.com/apk/res-auto"
        android:id="@+id/about_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        cardview:cardCornerRadius="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/about_title"
                android:id="@+id/about_title"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                android:textSize="35sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/about_subtitle"
                android:id="@+id/about_subtitle"
                android:layout_below="@+id/about_title"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/about_description"
                android:id="@+id/about_desc"
                android:layout_below="@+id/about_subtitle"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/legal_subtitle"
                android:id="@+id/legal_subtitle"
                android:textStyle="bold"
                android:layout_below="@+id/about_desc"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/legal_description"
                android:id="@+id/legal_description"
                android:layout_below="@+id/legal_subtitle"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/copyright"
        android:id="@+id/about_copyright"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>