<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="8dp">

    <android.support.v7.widget.CardView
        xmlns:cardview="http://schemas.android.com/apk/res-auto"
        android:id="@+id/home_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        cardview:cardCornerRadius="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="SmarterBit"
                android:id="@+id/home_title"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                android:textSize="35sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/home_subtitle"
                android:id="@+id/home_subtitle"
                android:layout_below="@+id/home_title"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/home_description"
                android:id="@+id/home_desc"
                android:layout_below="@+id/home_subtitle"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/home_how_do_i_use_subtitle"
                android:id="@+id/home_how_do_i_use_subtitle"
                android:layout_below="@+id/home_desc"
                android:layout_centerHorizontal="true"
                android:textStyle="bold"
                android:layout_marginTop="16dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/home_how_do_i_use_description"
                android:id="@+id/textView"
                android:layout_below="@+id/home_how_do_i_use_subtitle"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>
</RelativeLayout>